# flask_learning

./: Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  dockerfile  pyproject.toml  setup.cfg
.github/hooks/: pre-commit.sh
.github/workflows/: main.yml
docs/: controllers.md
nginx/: default.conf
src/: app.py
src/templates/: lera.html  not_found.html
tests/: test_url_for.py
