[tool.poetry]
name = "flask-learning"
version = "0.1.0"
description = ""
authors = ["emurze <grayemurze@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mypy = "^1.8.0"
black = "^23.12.1"
coverage = "^7.3.4"
flake8 = "^6.1.0"
pytest = "^7.4.3"
flask = "^3.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 79


[tool.pytest.ini_options]
addopts = ["-rsxX", "-l", "--tb=short", "--strict-markers"]
filterwarnings = ["ignore:.*test class 'TestRunner'.*:Warning"]
xfail_strict = true
cache_dir = ".cache/pytest"


[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
cache_dir = ".cache/mypy"


[tool.coverage.run]
omit = ["*/venv/*", "*/config/*", "*/tests/*", "*tests.py*", "*/test_*", "manage.py"]
data_file = ".cache/.coverage"

[tool.coverage.report]
fail_under = 85
show_missing = true